--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,11 +1,11 @@
 @media only screen and (max-width: 1180px) {
 
 
-  .TNav {
-    width: 939px !important;
+  .TNav{
+         width: 939px !important;
   }
 
-  .Tab3 {
+  .Tab3{
     width: 935px !important;
   }
 }
@@ -13,29 +13,56 @@
 @media only screen and (max-width: 1024px) {
 
 
-  .TNav {
-    width: 782px !important;
+    .TNav{
+           width: 782px !important;
+    }
+  
+    .Tab3{
+      width: 785px !important;
+    }
   }
-
-  .Tab3 {
-    width: 785px !important;
-  }
+ 
+th{
+    position: sticky;
+    top: -2px;
+    background:  #E8E8E8;
 }
 
-th {
-  position: sticky;
-  top: -2px;
-  background: #E8E8E8;
+.table-wrapper{
+    max-height: 480px !important;
+    overflow-y: scroll;
 }
 
-.table-wrapper {
-  max-height: 726px !important;
+div input::placeholder{
+    color: #3D2314;
+    font-weight: 500;
+    font-size: 16px;
+    font-family: Manrope;
+}
+
+
+.wrapperT{
+  max-height: 419px !important;
   overflow-y: scroll;
 }
 
-div input::placeholder {
-  color: #3D2314;
-  font-weight: 500;
-  font-size: 16px;
-  font-family: Manrope;
+th{
+  position: sticky;
 }
+
+.cardT{
+  max-height: 700px !important;
+  overflow-y: scroll;
+}
+
+.wrapperD{
+  max-height: 110px !important;
+  overflow-y: scroll;
+}
+
+.fab .button tab::All{
+  border-radius: 10px 0px 0px 10px;
+  border: 1px solid green;
+}
+
+
