--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,42 @@
-.bottom-shadow {
-    border-bottom: 1px solid rgb(28, 22, 22);
-
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
 
-.right-shadow {
-    border-right: 1px solid rgb(28, 22, 22);
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-.button-hover:hover {
-    background-color: #E8E8E8;
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
-.add-member {
-    width: calc(100% - 8px);
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
 
-    height: calc(100% - 8px);
+.card {
+  padding: 2em;
+}
 
-    box-sizing: border-box;
-    padding: 4px;
-
-    outline: none;
-    border: none;
+.read-the-docs {
+  color: #888;
 }
