--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,18 @@
     border: none;
 }
 
+.add-notes {
+    width: calc(100% - 8px);
+
+    height: calc(100% - 8px);
+
+    /* box-sizing: border-box; */
+    padding: 4px;
+
+    outline: none;
+    border: none;
+}
+
 
 
 
