--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -75,5 +75,12 @@ th{
   overflow-y: scroll;
 }
 
+.div2 textarea::placeholder{
+  color:rgba(0,0,0,0.68) ;
+  font-weight: 400;
+  font-family: Manrope;
+  font-size: 16px;
+  line-height: 19.2px;
 
+}
 
