--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -152,3 +152,41 @@ th {
   top: -2px;
   background: #E8E8E8;
 }
+
+.table-wrapperB  {
+  max-height: 747px !important;
+  width: 956px !important;
+  overflow-y: scroll;
+}
+
+thead{
+  position: sticky;
+  top: -2px;
+  background: #E8E8E8;
+}
+
+.role-switch-button {
+  display: flex;
+  width: 600px;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  color: #3D2314;
+  border: 1px solid lightgray;
+  border-radius: 24px;
+
+ 
+}
+
+.role-switch-button button {
+  /* background-color: white;
+  color: #3D2314; */
+
+  cursor: pointer;
+  flex: 1;
+}
+
+.role-switch-button button.active {
+  background-color: #3D2314;
+  color: white;
+}
