--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,11 @@
     transform: translate(-50%, -50%);
     transition: background-color 0.2s ease;
 }
+
+@media only screen and (max-width: 600px) {
+
+    
+  .Sales{
+    display: none !important;
+  }
+}
