--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -13,16 +13,18 @@
 @media only screen and (min-width :1024px) and (max-width: 1610px){
 
   .overview{
-     height: 650px !important;
+     height: 450px !important;
      overflow-y: scroll !important;
   }
 
   .graph-div{
-      width: 750px !important;
+      width: 650px !important;
+      
   }
 
   canvas{
-      width: 700px !important;
+      width: full !important;
+      
   }
 }
 
