--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -36,11 +36,12 @@
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 450px) {
 
 
   .headLn{
     display: none !important;
+    overflow-y: hidden !important;
   }
 
   .searchBox{
@@ -65,6 +66,7 @@
   }
 
 }
+
 
 @media only screen and (max-width: 1024px) {
 
